--- a/Mpp_Project/res/values/strings.xml
+++ b/Mpp_Project/res/values/strings.xml
@@ -3,5 +3,6 @@
 
 	<string name="app_name">Colloc</string>
 	<string name="app_id">675445415858318</string>
-
+	<string name="login">Log in with Facebook</string>
+	
 </resources>
