--- a/Mpp_Project/res/values/strings.xml
+++ b/Mpp_Project/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="login">Log in with Facebook</string>
+    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
 
 </resources>
