--- a/Mpp_Project/res/values/strings.xml
+++ b/Mpp_Project/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="login">Log in with Facebook</string>
     <string name="dummy_section_text">Section %1d is just a dummy section.</string>
-    <string name="title_activity_new_flat">NewFlatActivity</string>
+    <string name="title_activity_new_flat">Add new flat</string>
+    <string name="title_activity_add_new_flat">Create new flat</string>
 
 </resources>
