--- a/Mpp_Project/res/values/strings.xml
+++ b/Mpp_Project/res/values/strings.xml
@@ -10,5 +10,10 @@
     <string name="dummy_section_text">Section %1d is just a dummy section.</string>
     <string name="title_activity_new_flat">Add new flat</string>
     <string name="title_activity_add_new_flat">Create new flat</string>
+	<string name="logout">Logout</string>
+	<string name="leave_flat">Leave flat</string>
+	<string name="change_details">Change details</string>
+	<string name="flat_settings">FLAT SETTINGS</string>
+	<string name="user_settings">USER SETTINGS</string>
 
 </resources>
