Static XML View + CircularImageView (not working yet)

--- a/Mpp_Project/res/values/strings.xml
+++ b/Mpp_Project/res/values/strings.xml
@@ -14,5 +14,6 @@
 	<string name="change_details">Change details</string>
 	<string name="flat_settings">FLAT SETTINGS</string>
 	<string name="user_settings">USER SETTINGS</string>
+	<string name="last_activities">Last activities</string>
 
 </resources>
