--- a/Mpp_Project/res/values/strings.xml
+++ b/Mpp_Project/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Colloc</string>
     <string name="app_id">675445415858318</string>
     <string name="title_activity_flat">FlatActivity</string>
@@ -9,12 +10,13 @@
     <string name="dummy_section_text">Section %1d is just a dummy section.</string>
     <string name="title_activity_new_flat">Add new flat</string>
     <string name="title_activity_add_new_flat">Create new flat</string>
-	<string name="logout">Logout</string>
-	<string name="leave_flat">Leave flat</string>
-	<string name="change_details">Change details</string>
-	<string name="flat_settings">FLAT SETTINGS</string>
-	<string name="user_settings">USER SETTINGS</string>
-	<string name="last_activities">Last activities</string>
-	<string name="title_activity_change_details">Change flat details</string>
+    <string name="logout">Logout</string>
+    <string name="leave_flat">Leave flat</string>
+    <string name="change_details">Change details</string>
+    <string name="flat_settings">FLAT SETTINGS</string>
+    <string name="user_settings">USER SETTINGS</string>
+    <string name="last_activities">Last activities</string>
+    <string name="title_activity_change_details">Change flat details</string>
+    <string name="title_activity_flat_login">Join an existing flat</string>
 
 </resources>
